###FIX ---Changed zIndex so it won't overlap on anything

--- a/src/components/other/backgroundAnimations/backgroundAnimations.styles.scss
+++ b/src/components/other/backgroundAnimations/backgroundAnimations.styles.scss
@@ -4,6 +4,7 @@
   background: #1976d2;
   animation: ripple 15s infinite;
   box-shadow: 0 0 1px 0 #508fb9;
+  z-index: -1;
 }
 
 .small{
